# pre-commit-hooks-poc

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
pre-commit-hooks/print_arguments/: setup.cfg
pre-commit-hooks/run_org_hooks/: main.py
pre_commit_hooks/check_file_extension/: main.py
pre_commit_hooks/check_file_extension/test/: test_check_file_extension.py
pre_commit_hooks/check_file_extensions/: main.py
pre_commit_hooks/check_file_extensions/test/: test_check_file_extensions.py
pre_commit_hooks/run_org_hooks/: .pre-commit-config.yaml  main.py
