# setup.cfg
[metadata]
name = pre_commit_hooks_poc
version = 0.1.0
description = some description
long_description = file: README.md
long_description_content_type = text/markdown
author = xxx
author_email = xxx
license = MIT
url = https://github.com/asenindbt/pre-commit-hooks-poc

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    print-arguments = pre-commit-hooks.print_arguments.main:main
    run-org-hooks = pre-commit-hooks.run_org_hooks.main:main