[metadata]
name = pre_commit_hooks_poc
version = 0.1.0
description = some description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asenindbt/pre-commit-hooks-poc
author = Aishah Senin
author_email = aishah.senin@businessandtrade.gov.uk
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    print-arguments = pre_commit_hooks.print_arguments.main:main
