# setup.cfg
[metadata]
name = print-arguments
description = print the arguments you pass
version = 0.1.0
author = Aishah Senin
author_email = aishah.senin@businessandtrade.gov.uk
license = MIT

[options]
packages = find:

[options.entry_points]
console_scripts =
    print-arguments = print_arguments.main:main